--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@
       height: inherit;
       justify-content: space-around;
       width: auto;
-      #screen {
+      #display {
         width: 200px;
         height: 50px;
         font-size: 16px;
@@ -111,7 +111,7 @@
     flex-grow: 1;
     justify-content: space-evenly;
     align-items: center;
-    .drumKeys {
+    .drum-pad {
       background-color: rgb(53, 53, 53);
       height: 40px;
       width: 40px;
